Updated styling to prevent horizontal scrollbar on small viewports

--- a/css/sg-style.css
+++ b/css/sg-style.css
@@ -99,16 +99,8 @@ body {
  Utility Classes
 ---------------------------------------------------------------------------- */
 .sg-container {
-  padding: 0 24px; /* For older browsers */
-  padding: 0 1.5rem;
-}
-
-.sg-animated {
-  -webkit-transition: all 0.6s ease-out;
-     -moz-transition: all 0.6s ease-out;
-      -ms-transition: all 0.6s ease-out;
-       -o-transition: all 0.6s ease-out;
-          transition: all 0.6s ease-out;
+  padding: 0 16px; /* For older browsers */
+  padding: 0 1rem;
 }
 
 .sg-container:before,
@@ -499,6 +491,12 @@ body {
   opacity: 0;
   position: absolute;
   top: -100%;
+  width: 1px;
+  -webkit-transition: opacity 0.6s ease-out;
+   -moz-transition: opacity 0.6s ease-out;
+    -ms-transition: opacity 0.6s ease-out;
+     -o-transition: opacity 0.6s ease-out;
+        transition: opacity 0.6s ease-out;
 }
 
 /* Show source code blocks when active or JS is not enabled */
@@ -506,8 +504,27 @@ body {
 .no-js .sg-source {
   opacity: 1;
   position: relative;
+  width: 100%;
 }
 
+/* Videos
+---------------------------------------------------------------------------- */
+.sg-video {
+  height: 0;
+  padding-top: 56.25%;
+  position: relative;
+}
+
+.sg-video video {
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
 
 
 /* -------------------------------------------------------------------------
