--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
   font-family: "HelveticaNeue", "Helvetica", Arial, sans-serif;
 }
 
+img, svg, video, audio {
+  max-width: 100%;
+}
+
 
 /* -------------------------------------------------------------------------
  Alerts
